--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
   <meta charset="UTF-8">
   <title>Fruit Autocomplete</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet">
 
 </head>
 <body>
+  <h1>Find Your Fruit!</h1>
 <!-- partial:index.partial.html -->
 <div class="search-container">
-	<input type="text" name="fruit" id="fruit" placeholder="Search fruit 🍎">
+	<input type="text" name="fruit" id="fruit" placeholder="Search Fruit 🍎">
 	<div class="suggestions">
 		<ul></ul>
 	</div>
